apps/homelab/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless
  labels: &labels
    app.kubernetes.io/component: paperless-ngx
    app.kubernetes.io/name: paperless
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:2.14.5
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 2
              memory: 4Gi
          ports:
            - containerPort: 8000
              name: web

          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: consume
              mountPath: /usr/src/paperless/consume
            - name: import
              mountPath: /usr/src/paperless/import
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: consume
          persistentVolumeClaim:
            claimName: consume
        - name: import
          persistentVolumeClaim:
            claimName: import
      restartPolicy: Always
